# Ultra-Sonic-RC-Car

./: .gitignore  README.md
BT Serial Interface/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial_comms.cpp  serial_comms.h
Custom Libraries/Accelerometer/Accelerometer/: Accelerometer.ino
Custom Libraries/Motor Controller/: Motor Controller.ino
RC_car_main/: RC_car_main.ino
